--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
    <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
   <div class="tradingview-widget-container__widget"></div>
-  <div class="tradingview-widget-copyright"><a href="https://maxtrader.company/" rel="noopener nofollow" target="_blank"><span class="blue-text">maxtrader.company/TradingView</span></a></div>
+  <div class="tradingview-widget-copyright"><a href="https://maxtrader.company/" rel="noopener nofollow" target="_blank"><span class="blue-text">TradingView</span></a></div>
   <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
   {
   "symbols": [
@@ -282,7 +282,7 @@
   <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
   <div class="tradingview-widget-container__widget"></div>
-  <div class="tradingview-widget-copyright"><a href="https://maxtrader.company/" rel="noopener nofollow" target="_blank"><span class="blue-text">maxtrader.company/TradingView</span></a></div>
+  <div class="tradingview-widget-copyright"><a href="https://maxtrader.company/" rel="noopener nofollow" target="_blank"><span class="blue-text">TradingView</span></a></div>
   <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
   {
   "symbols": [
@@ -453,7 +453,7 @@
     <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
   <div class="tradingview-widget-container__widget"></div>
-  <div class="tradingview-widget-copyright"><a href="https://maxtrader.company/" rel="noopener nofollow" target="_blank"><span class="blue-text">maxtrader.company/TradingView</span></a></div>
+  <div class="tradingview-widget-copyright"><a href="https://maxtrader.company/" rel="noopener nofollow" target="_blank"><span class="blue-text">TradingView</span></a></div>
   <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-screener.js" async>
   {
   "width": "100%",
@@ -591,7 +591,7 @@
     <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
   <div class="tradingview-widget-container__widget"></div>
-  <div class="tradingview-widget-copyright"><a href="https://maxtrader.company/" rel="noopener nofollow" target="_blank"><span class="blue-text">maxtrader.company/TradingView</span></a></div>
+  <div class="tradingview-widget-copyright"><a href="https://maxtrader.company/" rel="noopener nofollow" target="_blank"><span class="blue-text">TradingView</span></a></div>
   <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-symbol-info.js" async>
   {
   "symbol": "BINANCE:BTCBRL",
@@ -658,7 +658,7 @@
     <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
   <div class="tradingview-widget-container__widget"></div>
-  <div class="tradingview-widget-copyright"><a href="https://maxtrader.company/" rel="noopener nofollow" target="_blank"><span class="blue-text">maxtrader.company/TradingView</span></a></div>
+  <div class="tradingview-widget-copyright"><a href="https://maxtrader.company/" rel="noopener nofollow" target="_blank"><span class="blue-text">TradingView</span></a></div>
   <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-tickers.js" async>
   {
   "symbols": [
@@ -898,7 +898,7 @@
             <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
   <div class="tradingview-widget-container__widget"></div>
-  <div class="tradingview-widget-copyright"><a href="https://rendaextra.company/" rel="noopener nofollow" target="_blank"><span class="blue-text">rendaextra.company/TradingView</span></a></div>
+  <div class="tradingview-widget-copyright"><a href="https://rendaextra.company/" rel="noopener nofollow" target="_blank"><span class="blue-text">TradingView</span></a></div>
   <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-mini-symbol-overview.js" async>
   {
   "symbol": "BMFBOVESPA:PIBB",
@@ -919,7 +919,7 @@
             <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
   <div class="tradingview-widget-container__widget"></div>
-  <div class="tradingview-widget-copyright"><a href="https://rendaextra.company/" rel="noopener nofollow" target="_blank"><span class="blue-text">rendaextra.company/TradingView</span></a></div>
+  <div class="tradingview-widget-copyright"><a href="https://rendaextra.company/" rel="noopener nofollow" target="_blank"><span class="blue-text">TradingView</span></a></div>
   <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-mini-symbol-overview.js" async>
   {
   "symbol": "CRYPTOCAP:BTC",
@@ -941,7 +941,7 @@
            <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
   <div class="tradingview-widget-container__widget"></div>
-  <div class="tradingview-widget-copyright"><a href="https://rendaextra.company/" rel="noopener nofollow" target="_blank"><span class="blue-text">rendaextra.company/TradingView</span></a></div>
+  <div class="tradingview-widget-copyright"><a href="https://rendaextra.company/" rel="noopener nofollow" target="_blank"><span class="blue-text">TradingView</span></a></div>
   <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-mini-symbol-overview.js" async>
   {
   "symbol": "BMFBOVESPA:OZ1",
@@ -963,7 +963,7 @@
             <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
   <div class="tradingview-widget-container__widget"></div>
-  <div class="tradingview-widget-copyright"><a href="https://maxtrader.company/" rel="noopener nofollow" target="_blank"><span class="blue-text">maxtrader.company/TradingView</span></a></div>
+  <div class="tradingview-widget-copyright"><a href="https://maxtrader.company/" rel="noopener nofollow" target="_blank"><span class="blue-text">TradingView</span></a></div>
   <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-mini-symbol-overview.js" async>
   {
   "symbol": "BMFBOVESPA:IBOV",
