--- a/invest.html
+++ b/invest.html
@@ -336,7 +336,7 @@
      <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
   <div class="tradingview-widget-container__widget"></div>
-  <div class="tradingview-widget-copyright"><a href="https://maxtrader.company/" rel="noopener nofollow" target="_blank"><span class="blue-text">maxtrader.company/TradingView</span></a></div>
+  <div class="tradingview-widget-copyright"><a href="https://maxtrader.company/" rel="noopener nofollow" target="_blank"><span class="blue-text">TradingView</span></a></div>
   <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-forex-cross-rates.js" async>
   {
   "width": "100%",
